--- a/.github/workflows/macos-test.yml
+++ b/.github/workflows/macos-test.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Build
-      run: swift build -v
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "OTCore-XcodeServerCI" -destination "platform=macOS,arch=x86_64"
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "OTCore-XcodeServerCI" -destination "platform=macOS,arch=x86_64"
