Added daily cron trigger to GitHub CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ on:
       
   workflow_dispatch:
     
+  cron: '30 11 * * *'   # once a day @ 11:30am UTC (4:30am PST)
+
 jobs: 
   macOS:
     name: macOS
