--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,8 @@ on:
       
   workflow_dispatch:
     
-  cron: '30 11 * * *'   # once a day @ 11:30am UTC (4:30am PST)
+  schedule:
+  - cron: '30 11 * * *'   # once a day @ 11:30am UTC (4:30am PST)
 
 jobs: 
   macOS:
