--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,19 @@ on:
   - cron: '30 11 * * *'   # once a day @ 11:30am UTC (4:30am PST)
 
 jobs: 
-  macOS:
-    name: macOS
-    runs-on: macos-latest
+  macOS-11:
+    name: macOS 11 Big Sur
+    runs-on: macos-11
+    steps:
+    - uses: actions/checkout@main
+    - name: Build
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "OTCore-CI" -destination "platform=macOS,arch=x86_64"
+    - name: Unit Tests
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "OTCore-CI" -destination "platform=macOS,arch=x86_64"
+
+  macOS-10_15:
+    name: macOS 10.15 Catalina
+    runs-on: macos-10.15
     steps:
     - uses: actions/checkout@main
     - name: Build
