Updated GitHub CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: macos-14
     steps:
     - uses: actions/checkout@main
-    - uses: maxim-lobanov/setup-xcode
+    - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable # Sometimes a newer version of Xcode is available but isn't yet made default
     - name: Build
@@ -61,7 +61,7 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@main
-    - uses: maxim-lobanov/setup-xcode
+    - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable # Sometimes a newer version of Xcode is available but isn't yet made default
     - name: Build
@@ -74,7 +74,7 @@ jobs:
     runs-on: macos-latest # this must be macos, GitHub does not offer iOS directly but we can use xcodebuild
     steps:
     - uses: actions/checkout@main
-    - uses: maxim-lobanov/setup-xcode
+    - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable # Sometimes a newer version of Xcode is available but isn't yet made default
     - name: iPhone 12 Simulator - Build
@@ -87,7 +87,7 @@ jobs:
     runs-on: macos-latest # this must be macos, GitHub does not offer tvOS directly but we can use xcodebuild
     steps:
     - uses: actions/checkout@main
-    - uses: maxim-lobanov/setup-xcode
+    - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable # Sometimes a newer version of Xcode is available but isn't yet made default
     - name: Apple TV - Build
@@ -100,7 +100,7 @@ jobs:
     runs-on: macos-latest # this must be macos, GitHub does not offer watchOS directly but we can use xcodebuild
     steps:
     - uses: actions/checkout@main
-    - uses: maxim-lobanov/setup-xcode
+    - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable # Sometimes a newer version of Xcode is available but isn't yet made default
     - name: Apple Watch - Build
