--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable
+    - name: Resolve Package Dependencies # needed because sometimes `xcodebuild build` fails otherwise
+      run: xcodebuild -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "$SCHEME" -resolvePackageDependencies | xcbeautify && exit ${PIPESTATUS[0]}
     - name: Build
       run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "$SCHEME" -destination "generic/platform=macOS,name=Any Mac" | xcbeautify && exit ${PIPESTATUS[0]}
     - name: Unit Tests
